# ai-research-agent

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt  server.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
